2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Review of all bsp_cleanup() implementations. In this
	phase, all prototypes were removed from bsp.h and empty
	implementations were removed and made to use the shared stub.

2008-09-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/ckinit.c: The Shared Memory Driver no longer requires the
	special IOCTL in Clock_control. This was a hack which has existed
	since before the Classic API Timer Manager was implemented. All
	implementations of and references to Clock_control were removed.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c, timer/timer.c: Convert to "bool".

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Eliminate empty function from every benchmark timer
	driver. Fix spelling.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Rename timer driver methods to follow RTEMS
	programming conventions.

2008-08-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/ckinit.c, console/leds.c, console/mc68ec.c,
	startup/bspstart.c, timer/timer.c: Add missing prototypes.

2008-05-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Rework to avoid .rel files.

2008-05-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Refactored and renamed initialization routines to
	rtems_initialize_data_structures, rtems_initialize_before_drivers,
	rtems_initialize_device_drivers, and
	rtems_initialize_start_multitasking. This opened the sequence up so
	that bootcard() could provide a more robust and flexible framework
	which is easier to explain and understand. This also lays the
	groundwork for sharing the division of available memory between the
	RTEMS workspace and heap and the C library initialization across all
	BSPs.

2008-03-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/linkcmds: Add wildcard to gcc_except_table section so
	programs compiled with gcc 4.3.x can link.
