@@ -14,11 +14,7 @@
  *  $Id$
  */
 
-#include <string.h>
-
 #include <bsp.h>
-#include <rtems/libio.h>
-#include <rtems/libcsupport.h>
 
 unsigned char *duart_base;
 extern struct duart_regs duart_info;
@@ -28,40 +24,28 @@ extern struct duart_regs duart_info;
 void led_putnum(void);
 
 /*
- *  Use the shared implementations of the following routines
- */
-
-void bsp_libc_init( void *, uint32_t, int );
-void bsp_pretasking_hook(void);               /* m68k version */
-
-/*
  *  bsp_start
  *
  *  This routine does the bulk of the system initialization.
  */
-
 void bsp_start( void )
 {
-  m68k_isr_entry *monitors_vector_table;
-  int             index;
-  extern void          *_WorkspaceBase;
-  extern void          *_RamSize;
-  extern unsigned long  _M68k_Ramsize;
+  m68k_isr_entry       *monitors_vector_table;
+  int                   index;
 
   /* RAM size set in linker script */
-  _M68k_Ramsize = (unsigned long)&_RamSize;
   duart_base    = (unsigned char *)DUART_ADDR;
 
   /*
    *  Set the VBR here to the monitor's default.
    */
-
   monitors_vector_table = (m68k_isr_entry *)0;
    /* This is where you set vector base register = 0 */
   m68k_set_vbr( monitors_vector_table );
 
   /* The vector interrupt table for the 680x0 is in appendix B-2
-	 of the M68000 Family Programmer's reference table */
+   *  of the M68000 Family Programmer's reference table
+   */
   for ( index=2 ; index<=255 ; index++ )
     M68Kvec[ index ] = monitors_vector_table[ 32 ];
 
@@ -78,9 +62,5 @@ void bsp_start( void )
   rtems_cache_enable_instruction();
   rtems_cache_enable_data();
 
-  Configuration.work_space_start = (void *) &_WorkspaceBase;
-
 /*  led_putnum('e'); * for debugging purposes only */
-
-  /* Clock_exit is done as an atexit() function */
 }
