@@ -28,9 +28,9 @@ dist_project_lib_DATA += startup/linkcmds
 
 startup_SOURCES = startup/bspclean.c ../../shared/bsplibc.c \
     ../../shared/bsppost.c startup/bspstart.c ../../shared/bootcard.c \
-    ../../m68k/shared/m68kpretaskinghook.c ../../shared/bsppredriverhook.c \
-    ../../shared/sbrk.c ../../m68k/shared/setvec.c \
-    ../../shared/gnatinstallhandler.c
+    ../../shared/bsppretaskinghook.c ../../shared/bsppredriverhook.c \
+    ../../m68k/shared/m68kbspgetworkarea.c ../../shared/sbrk.c \
+    ../../m68k/shared/setvec.c ../../shared/gnatinstallhandler.c
 clock_SOURCES = clock/ckinit.c
 console_SOURCES = console/console.c ../../shared/dummy_printk_support.c
 timer_SOURCES = timer/timer.c timer/timerisr.S
