@@ -37,9 +37,10 @@ dist_project_lib_DATA += startup/linkcmds
 
 startup_SOURCES = startup/bspclean.c ../../shared/bsplibc.c \
     ../../shared/bsppredriverhook.c ../../shared/bsppost.c \
-    startup/bspstart.c ../../shared/bootcard.c \
-    ../../m68k/shared/m68kpretaskinghook.c \
-    startup/page_table.c ../../shared/sbrk.c ../../m68k/shared/setvec.c \
+    startup/bspstart.c ../../shared/bootcard.c  \
+    ../../shared/bsppretaskinghook.c startup/page_table.c \
+    ../../m68k/shared/m68kbspgetworkarea.c startup/page_table.c \
+    ../../shared/sbrk.c ../../m68k/shared/setvec.c \
     ../../shared/gnatinstallhandler.c
 clock_SOURCES = clock/ckinit.c
 console_SOURCES = console/console.c ../../shared/dummy_printk_support.c
