@@ -22,6 +22,8 @@ RTEMS_CHECK_NETWORKING
 AM_CONDITIONAL([HAS_NETWORKING],test "$HAS_NETWORKING" = "yes")
 AM_CONDITIONAL([HAS_FPSP],[test "$RTEMS_CPU_MODEL" = "m68040"])
 
+RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION
+
 # Explicitly list all Makefiles here
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
