@@ -24,7 +24,7 @@
  */
 _RamBase = DEFINED(_RamBase) ? _RamBase : 0x20000;
 _RamSize = DEFINED(_RamSize) ? _RamSize : 1M;
-_HeapSize = DEFINED(_HeapSize) ? _HeapSize : 0x10000;
+_HeapSize = DEFINED(_HeapSize) ? _HeapSize : 0x0;
 _StackSize = DEFINED(_StackSize) ? _StackSize : 0x1000;
 
 MEMORY
