@@ -1,3 +1,10 @@
+2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am, configure.ac, clock/ckinit.c, startup/bspstart.c,
+	startup/linkcmds: Add use of bsp_get_work_area() in its own file and
+	rely on BSP Framework to perform more initialization. Remove
+	unnecessary includes of rtems/libio.h and rtems/libcsupport.h.
+
 2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* include/bsp.h: Review of all bsp_cleanup() implementations. In this
